@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.09.29</p>
+<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.10.14</p>
 
 
 
@@ -59,6 +59,7 @@
     <li><a href="./option_shear.html">shear</a> - Shear the system</li>
     <li><a href="./option_shift.html">shift</a> - Shift part of the system</li>
     <li><a href="./option_sort.html">sort</a> - Change the order in which atoms are written</li>
+    <li><a href="./option_stress.html">stress</a> - Applies stress to the system</li>
     <li><a href="./option_substitute.html">substitute</a> - Replace atoms by other atoms</li>
     <li><a href="./option_unit.html">unit</a> - Change the unit of coordinates</li>
     <li><a href="./option_unskew.html">unskew</a> - Reduce the skew of the box</li>
