@@ -40,7 +40,9 @@
 
 <p>In order to apply the same deformation in all directions, set the Poisson's ratio value to -1. This can be useful, for instance, to deform a system according to its thermal expansion coefficient &alpha;, in which case one should use &epsilon;=&alpha;T.</p>
 
-<p>For shear stress one can use the <a href="./option_shear.html">option <code>-shear</code></a>.</p>
+<p>If a selection was defined (with the <a href="./option_select.html">option <code>-select</code></a>) then the deformation will apply only to selected atoms, and the box will not be deformed.</p>
+
+<p>For shear strain one can use the <a href="./option_shear.html">option <code>-shear</code></a>. In order to define the stress one can use the <a href="./option_stress.html">option <code>-stress</code></a>.</p>
 
 
 <h4>Default</h4>
