@@ -58,6 +58,7 @@
     <li><a href="./option_shear.html">shear</a> - Shear the system</li>
     <li><a href="./option_shift.html">shift</a> - Shift part of the system</li>
     <li><a href="./option_sort.html">sort</a> - Change the order in which atoms are written</li>
+    <li><a href="./option_stress.html">stress</a> - Applies stress to the system</li>
     <li><a href="./option_substitute.html">substitute</a> - Replace atoms by other atoms</li>
     <li><a href="./option_unit.html">unit</a> - Change the unit of coordinates</li>
     <li><a href="./option_unskew.html">unskew</a> - Reduce the skew of the box</li>
