@@ -40,7 +40,9 @@
 
 <p>Pour appliquer la même déformation dans toutes les directions il faut utiliser un coefficient de Poisson égal à -1. Ceci peut être utile par ex. pour déformer un matériau d'après son coefficient d'expansion thermique &alpha;, auquel cas il faut utiliser &epsilon;=&alpha;T.</p>
 
-<p>Pour une contrainte de cisaillement référez-vous à l'<a href="./option_shear.html">option <code>-shear</code></a>.</p>
+<p>Si une sélection est définie (avec l'<a href="./option_select.html">option <code>-select</code></a>) alors seuls la déformation ne s'appliquera qu'aux atomes sélectionnés, et la boîte ne sera pas déformée.</p>
+
+<p>Pour appliquer un cisaillement référez-vous à l'<a href="./option_shear.html">option <code>-shear</code></a>. Pour appliquer un état de contrainte il est possible d'utiliser l'<a href="./option_stress.html">option <code>-stress</code></a>.</p>
 
 
 <h4>Défaut</h4>
