@@ -58,6 +58,7 @@
     <li><a href="./option_shear.html">shear</a> - Appliquer un cisaillement</li>
     <li><a href="./option_shift.html">shift</a> - Translater une partie du système</li>
     <li><a href="./option_sort.html">sort</a> - Changer l'ordre dans lequel les atomes sont rangés</li>
+    <li><a href="./option_stress.html">stress</a> - Appliquer une contrainte au système</li>
     <li><a href="./option_substitute.html">substitute</a> - Remplacer des atomes par d'autres atomes</li>
     <li><a href="./option_unit.html">unit</a> - Changer de système d'unités</li>
     <li><a href="./option_unskew.html">unskew</a> - Réduire le cisaillement de la boîte</li>
