@@ -1,2 +1,0 @@
-box 160 160 160
-random 14
