@@ -9,7 +9,7 @@ MODULE read_cla
 !*     Unité Matériaux Et Transformations (UMET),                                 *
 !*     Université de Lille 1, Bâtiment C6, F-59655 Villeneuve D'Ascq (FRANCE)     *
 !*     pierre.hirel@univ-lille1.fr                                                *
-!* Last modification: P. Hirel - 26 Sept. 2014                                    *
+!* Last modification: P. Hirel - 14 Oct. 2014                                     *
 !**********************************************************************************
 !* This program is free software: you can redistribute it and/or modify           *
 !* it under the terms of the GNU General Public License as published by           *
@@ -1165,6 +1165,24 @@ DO WHILE(i<SIZE(cla))
     READ(cla(i),*,END=400,ERR=400) temp
     options_array(ioptions) = TRIM(options_array(ioptions))//' '//TRIM(temp)
     IF( temp.NE.'up' .AND. temp.NE.'down' .AND. temp.NE.'pack') GOTO 120
+  !
+  ELSEIF(clarg=='-stress') THEN
+    ioptions = ioptions+1
+    options_array(ioptions) = TRIM(clarg)
+    !Read stress component
+    i=i+1
+    READ(cla(i),*,END=400,ERR=400) temp
+    temp = ADJUSTL(temp)
+    options_array(ioptions) = TRIM(options_array(ioptions))//' '//TRIM(temp)
+    SELECT CASE(temp)
+    CASE('x','X','xx','XX','y','Y','yy','YY','z','Z','zz','ZZ', &
+        & 'xy','XY','yx','YX','zx','ZX','xz','XZ','zy','ZY','yz','YZ','p','P')
+      !Read value of stress
+      i=i+1
+      READ(cla(i),*,END=400,ERR=400) temp
+      READ(temp,'(a)',END=120,ERR=120) tempreal
+      options_array(ioptions) = TRIM(options_array(ioptions))//' '//TRIM(temp)
+    END SELECT
   !
   ELSEIF(clarg=='-substitute' .OR. clarg=='-sub') THEN
     ioptions = ioptions+1
